Identify serial collector elected.